--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1304,6 +1304,44 @@
   number = {7}
 }
 
+@article{clarkAnnualWoodProduction2010,
+  title = {Annual Wood Production in a Tropical Rain Forest in {{NE Costa Rica}} Linked to Climatic Variation but Not to Increasing {{CO2}}},
+  author = {Clark, David B. and Clark, Deborah A. and Oberbauer, Steven F.},
+  date = {2010},
+  journaltitle = {Global Change Biology},
+  volume = {16},
+  pages = {747--759},
+  issn = {1365-2486},
+  doi = {10.1111/j.1365-2486.2009.02004.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2486.2009.02004.x},
+  urldate = {2021-07-13},
+  abstract = {Increased atmospheric [CO2] could theoretically lead to increased forest productivity (‘CO2 fertilization’). This mechanism was hypothesized as a possible explanation for biomass increases reported from tropical forests in the last 30+ years. We used unique long-term records of annually measured stands (eighteen 0.5 ha plots, 10 years) and focal tree species (six species, 24 years) to assess the effects of rainfall, temperature, and atmospheric [CO2] on annual wood production in a neotropical rain forest. Our study area was a meso-scale section (600 ha) of old-growth Tropical Wet Forest in NE Costa Rica. Using the repeated remeasurements we directly assessed the relative effects of interannual climatic variation and increasing atmospheric [CO2] on wood production. A remarkably simple two-factor model explained 91\% of the interannual variance in stand-level tree growth; the statistically independent factors were total dry season rainfall (positive effect, r2=0.85) and night-time temperature (negative effect, r2=0.42). Stand-level tree mortality increased significantly with night-time temperature. After accounting for dry season rainfall and night-time temperature, there was no effect of annual [CO2] on tree growth in either the stand or focal species data. Tree growth in this Tropical Wet Forest was surprisingly sensitive to the current range of dry season conditions and to variations in mean annual night-time temperature of 1–2°. Our results suggest that wood production in the lowland rainforests of NE Costa Rica (and by extension in other tropical regions) may be severely reduced in future climates that are only slightly drier and/or warmer.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2486.2009.02004.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XYKAMCEC\\Clark et al. - 2010 - Annual wood production in a tropical rain forest i.pdf;C\:\\Users\\Me\\Zotero\\storage\\JN5D6SIR\\j.1365-2486.2009.02004.html},
+  keywords = {climate,CO2 fertilization,Costa Rica,drought,global climate change,La Selva,rainfall,temperature,tropical rain forest,tropical tree growth},
+  langid = {english},
+  number = {2}
+}
+
+@article{clarkTropicalRainForest2015,
+  title = {Tropical {{Rain Forest Structure}}, {{Tree Growth}} and {{Dynamics}} along a 2700-m {{Elevational Transect}} in {{Costa Rica}}},
+  author = {Clark, David B. and Hurtado, Johanna and Saatchi, Sassan S.},
+  date = {2015-04-09},
+  journaltitle = {PLOS ONE},
+  volume = {10},
+  pages = {e0122905},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0122905},
+  url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0122905},
+  urldate = {2021-07-13},
+  abstract = {Rapid biological changes are expected to occur on tropical elevational gradients as species migrate upslope or go extinct in the face of global warming. We established a series of 9 1-ha plots in old-growth tropical rainforest in Costa Rica along a 2700 m relief elevational gradient to carry out long-term monitoring of tropical rain forest structure, dynamics and tree growth. Within each plot we mapped, identified, and annually measured diameter for all woody individuals with stem diameters {$>$}10 cm for periods of 3-10 years. Wood species diversity peaked at 400-600 m and decreased substantially at higher elevations. Basal area and stem number varied by less than two-fold, with the exception of the 2800 m cloud forest summit, where basal area and stem number were approximately double that of lower sites. Canopy gaps extending to the forest floor accounted for {$<$}3\% of microsites at all elevations. Height of highest crowns and the coefficient of variation of crown height both decreased with increasing elevation. Rates of turnover of individuals and of stand basal area decreased with elevation, but rates of diameter growth and stand basal area showed no simple relation to elevation. We discuss issues encountered in the design and implementation of this network of plots, including biased sampling, missing key meteorological and biomass data, and strategies for improving species-level research. Taking full advantage of the major research potential of tropical forest elevational transects will require sustaining and extending ground based studies, incorporation of new remotely-sensed data and data-acquisition platforms, and new funding models to support decadal research on these rapidly-changing systems.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KNQA2B93\\Clark et al. - 2015 - Tropical Rain Forest Structure, Tree Growth and Dy.pdf;C\:\\Users\\Me\\Zotero\\storage\\GLGXMSBN\\article.html},
+  keywords = {Census,Death rates,Forest ecology,Forests,Rainforests,Species diversity,Trees,Tropical forests},
+  langid = {english},
+  number = {4}
+}
+
 @article{cobleHowVerticalPatterns2016,
   title = {How Vertical Patterns in Leaf Traits Shift Seasonally and the Implications for Modeling Canopy Photosynthesis in a Temperate Deciduous Forest},
   author = {Coble, Adam P. and VanderWall, Brittany and Mau, Alida and Cavaleri, Molly A.},
@@ -7648,6 +7686,25 @@
   number = {8}
 }
 
+@article{silvaResponseOldgrowthTropical2013,
+  title = {Response of an Old-Growth Tropical Rainforest to Transient High Temperature and Drought},
+  author = {Silva, Carlos E. and Kellner, James R. and Clark, David B. and Clark, Deborah A.},
+  date = {2013},
+  journaltitle = {Global Change Biology},
+  volume = {19},
+  pages = {3423--3434},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.12312},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.12312},
+  urldate = {2021-07-13},
+  abstract = {Tropical rainforests have experienced episodes of severe heat and drought in recent decades, and climate models project a warmer and potentially drier tropical climate over this century. However, likely responses of tropical rainforests are poorly understood due to a lack of frequent long-term measurements of forest structure and dynamics. We analyzed a 12-year record (1999–2010) of 47 817 annual measurements of canopy height to characterize the response of an old-growth Neotropical rainforest to the severe heat and drought associated with the 1997–1998 El Niño. Well-drained soils on slopes and plateaus experienced a threefold increase in the fraction of the landscape in gaps (≤2 m) and a reduction in the fraction in high canopy ({$>$}15 m) causing distributions of canopy height to depart from equilibrium for a period of 2–3 years. In contrast, forests on low-lying alluvial terraces remained in equilibrium and were nearly half as likely to experience upper canopy ({$>$}15 m) disturbance over the 12 years of observation. Variation in forest response across topographic positions suggests that tropical rainforests are more sensitive to moisture deficits than high temperature and that topography likely structures landscape-level variation in the severity of drought impacts.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.12312},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\W4FHHAIE\\gcb.html},
+  keywords = {canopy,Costa Rica,drought,global change,La Selva,rainforest},
+  langid = {english},
+  number = {11}
+}
+
 @article{simpragaLanguagePlantsWhere2016,
   title = {Language of Plants: {{Where}} Is the Word?},
   shorttitle = {Language of Plants},
@@ -7701,6 +7758,25 @@
   abstract = {It is well known that vertical canopy gradients and varying sky conditions influence photosynthesis (Pn), specific leaf area (SLA), leaf thickness (LT) and leaf pigments (lutein, â-carotene and chlorophyll). In contrast, little is known about these effects on monoterpenoid (MT) emissions. Our study examines simultaneously measured Pn, MT emissions and the MT/Pn ratio along the canopy of an adult European beech tree (Fagus sylvatica L.) in natural forest conditions. Dynamic branch enclosure systems were used at four heights in the canopy (7, 14, 21 and 25~m) in order to establish relationships and better understand the interaction between Pn and MT emissions under both sunny and cloudy sky conditions. Clear differences in Pn, MT emissions and the MT/Pn ratio were detected within the canopy. The highest Pn rates were observed in the sun leaves at 25~m due to the higher intercepted light levels, whereas MT emissions (and the MT/Pn ratio) were unexpectedly highest in the semi-shaded leaves at 21~m. The higher Pn rates and, apparently contradictory, lower MT emissions in the sun leaves may be explained by the hypothesis of Owen and Peñuelas (2005), stating synthesis of more photo-protective carotenoids may decrease the emissions of volatile isoprenoids (including MTs) because they both share the same biochemical precursors. In addition, leaf traits like SLA, LT and leaf pigments clearly differed with height in the canopy, suggesting that the leaf's physiological status cannot be neglected in future research on biogenic volatile organic compounds (BVOCs) when aiming at developing new and/or improved emission algorithms.},
   keywords = {Beech,Carotenoids,Monoterpenoids,Photosynthesis,Sun and shade leaves,Vertical canopy gradient,Volatiles},
   langid = {english}
+}
+
+@article{slikLargeTreesDrive2013,
+  title = {Large Trees Drive Forest Aboveground Biomass Variation in Moist Lowland Forests across the Tropics},
+  author = {Slik, J. W. Ferry and Paoli, Gary and McGuire, Krista and Amaral, Ieda and Barroso, Jorcely and Bastian, Meredith and Blanc, Lilian and Bongers, Frans and Boundja, Patrick and Clark, Connie and Collins, Murray and Dauby, Gilles and Ding, Yi and Doucet, Jean-Louis and Eler, Eduardo and Ferreira, Leandro and Forshed, Olle and Fredriksson, Gabriella and Gillet, Jean-Francois and Harris, David and Leal, Miguel and Laumonier, Yves and Malhi, Yadvinder and Mansor, Asyraf and Martin, Emanuel and Miyamoto, Kazuki and Araujo-Murakami, Alejandro and Nagamasu, Hidetoshi and Nilus, Reuben and Nurtjahya, Eddy and Oliveira, Átila and Onrizal, Onrizal and Parada-Gutierrez, Alexander and Permana, Andrea and Poorter, Lourens and Poulsen, John and Ramirez-Angulo, Hirma and Reitsma, Jan and Rovero, Francesco and Rozak, Andes and Sheil, Douglas and Silva-Espejo, Javier and Silveira, Marcos and Spironelo, Wilson and ter Steege, Hans and Stevart, Tariq and Navarro-Aguilar, Gilberto Enrique and Sunderland, Terry and Suzuki, Eizi and Tang, Jianwei and Theilade, Ida and van der Heijden, Geertje and van Valkenburg, Johan and Do, Tran Van and Vilanova, Emilio and Vos, Vincent and Wich, Serge and Wöll, Hannsjoerg and Yoneda, Tsuyoshi and Zang, Runguo and Zhang, Ming-Gang and Zweifel, Nicole},
+  date = {2013},
+  journaltitle = {Global Ecology and Biogeography},
+  volume = {22},
+  pages = {1261--1271},
+  issn = {1466-8238},
+  doi = {10.1111/geb.12092},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12092},
+  urldate = {2021-07-13},
+  abstract = {Aim Large trees (d.b.h. ≥ 70 cm) store large amounts of biomass. Several studies suggest that large trees may be vulnerable to changing climate, potentially leading to declining forest biomass storage. Here we determine the importance of large trees for tropical forest biomass storage and explore which intrinsic (species trait) and extrinsic (environment) variables are associated with the density of large trees and forest biomass at continental and pan-tropical scales. Location Pan-tropical. Methods Aboveground biomass (AGB) was calculated for 120 intact lowland moist forest locations. Linear regression was used to calculate variation in AGB explained by the density of large trees. Akaike information criterion weights (AICc-wi) were used to calculate averaged correlation coefficients for all possible multiple regression models between AGB/density of large trees and environmental and species trait variables correcting for spatial autocorrelation. Results Density of large trees explained c. 70\% of the variation in pan-tropical AGB and was also responsible for significantly lower AGB in Neotropical [287.8 (mean) ± 105.0 (SD) Mg ha−1] versus Palaeotropical forests (Africa 418.3 ± 91.8 Mg ha−1; Asia 393.3 ± 109.3 Mg ha−1). Pan-tropical variation in density of large trees and AGB was associated with soil coarseness (negative), soil fertility (positive), community wood density (positive) and dominance of wind dispersed species (positive), temperature in the coldest month (negative), temperature in the warmest month (negative) and rainfall in the wettest month (positive), but results were not always consistent among continents. Main conclusions Density of large trees and AGB were significantly associated with climatic variables, indicating that climate change will affect tropical forest biomass storage. Species trait composition will interact with these future biomass changes as they are also affected by a warmer climate. Given the importance of large trees for variation in AGB across the tropics, and their sensitivity to climate change, we emphasize the need for in-depth analyses of the community dynamics of large trees.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12092},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SERFCJYX\\Slik et al. - 2013 - Large trees drive forest aboveground biomass varia.pdf;C\:\\Users\\Me\\Zotero\\storage\\73K3ENL5\\geb.html},
+  keywords = {Climate,ectomycorrhizal associations,large tree density,pan-tropical analysis,soils,species traits,tree size,tropical forest biomass,wind dispersal,wood density},
+  langid = {english},
+  number = {12}
 }
 
 @incollection{slotEffectsRisingTemperature2016,
@@ -8366,6 +8442,25 @@
   abstract = {More frequent and severe disturbances increasingly open the forest canopy and initiate tree regeneration. Simultaneously, increasing weather extremes, such as drought and heat, are threatening species adapted to cool and moist climate. The magnitude of the microclimatic buffering capacity of forest canopies to mitigate hot and dry weather conditions and its disturbance-induced reduction remains poorly quantified. Also, the influence of disturbance legacies (e.g., deadwood) on forest microclimate is unresolved. In a unique manipulation experiment we investigated (i) the microclimatic buffering capacity of forest canopies in years with different climatic conditions; (ii) the impacts of spatial disturbance patterns on surface light and microclimate; and (iii) the effect of deadwood presence and type on microclimate. Treatments included two disturbance patterns (i.e., aggregated and distributed), four deadwood types (i.e., standing, downed, standing and downed, removed), and one untreated control (i.e., nine treatments in total), replicated at five sites dominated by European beech (Fagus sylvatica L.) in southeastern Germany. We measured forest floor light conditions and derived diurnal extremes and variation in temperature (T) and vapor pressure deficit (VPD) during four consecutive summer seasons (2016 – 2019). The buffering capacity of intact forest canopies was higher in warm and dry years. Surface light was significantly higher in spatially aggregated disturbance gaps compared to distributed disturbances of similar severity. An increase in surface light by 10 \% relative to closed canopies elevated Tmax and VPDmax by 0.42°C and 0.04 kPa, respectively. Deadwood presence and type did not affect the forest microclimate significantly. Microclimatic buffering under forest canopies can dampen the effects of climate change. However, increasing canopy disturbances result in more light penetrating the canopy, reducing the microclimatic buffering capacity of forests. We conclude that forest management should foster microclimatic buffering in forests as one element of a multi-pronged strategy to counter climate change.},
   keywords = {Adaptive forest management,Deadwood,Disturbance patterns,Evaporative cooling,Latent heat,Microclimate},
   langid = {english}
+}
+
+@article{thomasLowMortalityTall2013,
+  title = {Low Mortality in Tall Tropical Trees},
+  author = {Thomas, R. Q. and Kellner, J. R. and Clark, D. B. and Peart, D. R.},
+  date = {2013},
+  journaltitle = {Ecology},
+  volume = {94},
+  pages = {920--929},
+  issn = {1939-9170},
+  doi = {10.1890/12-0939.1},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/12-0939.1},
+  urldate = {2021-07-13},
+  abstract = {The dynamics of the tallest trees in tropical forests are of special interest due to their carbon content, canopy dominance, and the large canopy gaps created when they die. Known ecological mechanisms that may influence tall tree survival lead to conflicting predictions. Hydraulic stress and exposure to high winds and desiccation should increase death rates, yet the tallest trees have the greatest access to light and escape damage caused by falling boles and branches. The uncertainty in tall tree mortality rates has been difficult to address due to their low density, which makes mortality rates challenging to estimate accurately. Here, we use a combination of LiDAR remote sensing and field measurements to show that the mortality rate over 8.5 years among individuals {$>$}40 m tall in 444 ha of lowland Neotropical rain forest was 1.2\% per year, less than half the landscape-scale average for all canopy trees (2.7\% per year). The low mortality is likely explained by species-specific traits that decrease the mortality risk and/or ecological advantages of height that outweigh the risks. Regardless of the mechanisms, the low mortality rate has important implications for tropical forest carbon budgets, as we estimated that a single tall individual represents 2–11\% of total live aboveground carbon stocks per hectare. Our findings suggest that height-specific dynamics may be surprisingly different from traditional diameter-specific dynamics, emphasizing the importance of extending ecological studies to investigate the role of tree height in forest dynamics.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/12-0939.1},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KF43A35C\\Thomas et al. - 2013 - Low mortality in tall tropical trees.pdf},
+  keywords = {carbon cycling,dynamics,LiDAR,mortality,remote sensing,tropical forest},
+  langid = {english},
+  number = {4}
 }
 
 @article{thomasPhotosyntheticDifferencesSaplings2002,
