--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -300,7 +300,7 @@ In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, 
 
 Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
 Generally, the pattern of fundamental trait adaptation to light gradients across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
-For instance, across tree size classes, there is an increase in the fractions of species that are isoprene-emitting (**REFS**) and deciduous [@conditQuantifyingDeciduousnessTropical2000c; @Meakem2018].
+For instance, across tree size classes, there is an increase in the fractions of species that are isoprene-emitting (**REFS**) and deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
 However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
 
 Therefore, $T_{leaf}$ patterns within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
