--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -376,12 +376,12 @@ The high temperature carbon compensation point of sun leaves is higher in isopre
 **Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect whole-tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`).** 
 
 
-### Tree metabolism and growth
+### Tree metabolism, growth, and survival
 
 **Vertical gradients affect tree metabolism and growth.**
-Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured diameter breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeira_sizerelated_2015].
-Specifically, increases are linked in part to increased leaf area and in part to increasing probability that the crown is in the canopy [@Muller-Landau_2006_EcologyLetters], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific metabolism (Table 2).
-Of the fixed C, a higher proportion is consumed by respiration, in part because of higher leaf respiration ($R_{dark}$, Table 2) and in part because of higher sapwood:leaf area ratio (**REFS** -- [@IncreasingRespiratoryCosts]?).
+Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured diameter breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizeRelatedScaling2015].
+Specifically, increases are linked increased leaf area and in part to increasing probability that the crown is in the canopy [@muller-landauTestingMetaabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific metabolism (Table 2).
+Of the fixed C, a higher proportion is consumed by respiration, in part because of higher leaf respiration ($R_{dark}$, Table 2) and in part because of higher sapwood volume (??confirm??) [**REFS**; @IncreasingRespiratoryCosts?].
 
 - C allocation --> respiration, woody growth, NSCs, foliage turnover, belowground allocation, reproduction
 - we don't know a whole lot about how C allocation scales with tree size
@@ -391,22 +391,36 @@ Of the fixed C, a higher proportion is consumed by respiration, in part because 
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
+Across biomes, including mesic forests, surface conductance and evapotranspiration tend to be more strongly limited by high atmospheric demand (high $T_{air}$ and $VPD$, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. 
+In terms of transpiration and photosynthesis, the taller trees that occupy canopy positions in relatively dense-canopy forests tend to have lower rates during periods of high- relative to low- atmospheric demand -- be these  on the time scale of hours (**REFS?**), days [@anderson-teixeiraSizeRelatedScaling2015], seasons [@christoffersenLinkingHydraulicTraits2016], or years (**? REFS?**). 
 
-*all of the following should be condensed into a paragraph or maybe 2:*
+- Taller trees in the Amazon had greater stomatal sensitivity to drought, resulting in greater reductions transpiration and photosynthesis [@garciaImportanceHydraulicStrategy2021].
+- @christoffersenLinkingHydraulicTraits2016 uses trait-based modeling to show that canopy trees have lower dry-season: wet-season transpiration. 
+- Smaller trees also have greater capacity to adjust traits realted carbon metabolism to drought [@bartholomewSmallTropicalForest2020]
+- *(it would be good to find a relevant study for open forests-- perhaps track down studies mentioned by Bev Law)*
+
+In contrast, greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. 
+
+The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments and sometimes forest census data.
+While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions (**REFS--KAT**), only a relatively limited number of studies have directly examined drought- or temperature- sensitivities as a function of tree size.
+These have generally found greater sensitivity to low precipitation or high temperatures among large/ canopy trees [**Fig. `r fig_treerings`**, @mcgregorTreeHeightLeaf2021; @anderson-teixeiraJointEffectsClimate2021] , corroborating evidence from forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015].
+Despite the potential for shorter trees in open forests to experience greater environmental stress [*Fig. `r fig_schematic`b*; **REFS**], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimate2021].
+
+There are, however, noteable exceptions to this pattern: in eight mesic forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
+Similarly, in tropical forests higher night-time temperatures have been associated with decelerating tree growth rates predominantly in smaller trees *but also in taller trees* [*Clark 2010; 2013; Feeley et al. 2007*].
+Potential mechanisms for these patterns include increases in nighttime respiratory carbon loss that disproportionately reduced carbon availability for growth among small trees, or that understory $g_s$  might be stifled under humid conditions, resulting in higher $T_{leaf}$ (Fig. `r fig_leaf_T`) and lower photosynthesis. 
+It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. 
+Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions.
+
+
+
 
 ~~~ 
+misc content to incorpoarte:
 
-- Within species, tolerance of more than one biological and biophyical stressors can increase with tree height and light, enabled by non-structural carbon reserve [NSC], with smaller shaded trees being more sensitive due to lower NSC [@niinemetsResponsesForestTrees2010a]. 
+- evidence in mesic temperate and subtropical eucalyptus forests shows that higher temperatures primarily reduced tree growth through altering water availability  [@bowmanWarmerWorldWill2014]. 
 
-
-Greater $VPD$ and low RH can be more stressful for trees than soil moisture across biomes-including mesic forests, as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Whereas greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes can cause droughts, that are more  detrimental to larger trees than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
-
-Biophysical conditions can alter growth rates, but can do so differently between size classes through influencing existing demographic differences. Particulary. evidence in mesic temperate and subtropical eucalyptus forests shows that higher temperatures primarily reduced tree growth through altering water availability  [@bowmanWarmerWorldWill2014]. Whereas in tropical forests higher nighttime temperatures was associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees [*Clark 2010; 2013; Feeley et al. 2007*], perhaps due to increase in nighttime respiratory carbon loss that reduced carbon availability for growth. 
-
-Recently emerging evidence indicates that understory trees tend to exhibit greater growth declines with increasing $T_{air}$ under mesic conditions.
-In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
-This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
- It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
+- In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. ALso, tropical warming experiment showed increased growth (**Winter**)
 
 Phenologically, in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, later in spring, short-term heat waves can negatively impact partially-expanded canopy leaves by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves more severly than in understory saplings that are buffered [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
 
@@ -417,7 +431,7 @@ Phenologically, in temperate deciduous and mesic forests, understory growth can 
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
-**Tree mortality risk is also size-structured.**
+**Tree mortality risk from climate-related stress is also size-structured.**
 
 - most common trend is higher risk of drought mortality for larger trees [@bennettLargerTreesSuffer2015; @stovall], including in open forests (**REFS**). *(However, there are exceptions...)*
 - also, greater risks of lightning, blow-down, etc.  (@Esquivel-Muelbert_2021) *(although this isn't temperature-related, so should get minimal attention, if at all)*
