--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1286,6 +1286,16 @@
   number = {2}
 }
 
+@article{christoffersenLinkingHydraulicTraits2016,
+  title = {Linking Hydraulic Traits to Tropical Forest Function in a Size-Structured and Trait-Driven Model ({{TFS}} v.1-{{Hydro}})},
+  author = {Christoffersen, Bradley O and Gloor, Manuel and Fauset, Sophie and Fyllas, Nikolaos M and Galbraith, David R and Baker, R and Kruijt, Bart and Rowland, Lucy and Fisher, Rosie A and Binks, Oliver J and Sevanto, Sanna and Xu, Chonggang and Jansen, Steven and Choat, Brendan and Mencuccini, Maurizio and McDowell, Nate G and Meir, Patrick},
+  date = {2016},
+  journaltitle = {Geosci. Model Dev.},
+  pages = {29},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RNUYERLJ\\Christoffersen et al. - 2016 - Linking hydraulic traits to tropical forest functi.pdf},
+  langid = {english}
+}
+
 @article{chunxiaChangesLeafPhotosynthetic2008,
   title = {Changes in Leaf Photosynthetic Characteristics and Water Use Efficiency along with Tree Height of 4 Tree Species},
   author = {Chunxia, He and Jiyue, Li and Ming, Guo and Yutao, Wang and Chong, Chen},
@@ -2268,6 +2278,51 @@
   keywords = {biodiversity,buffering,climate change,ecosystem function,forest,future research,microclimate,offset},
   langid = {english},
   number = {11}
+}
+
+@article{garciaImportanceHydraulicStrategy2021,
+  title = {Importance of Hydraulic Strategy Trade-Offs in Structuring Response of Canopy Trees to Extreme Drought in Central {{Amazon}}},
+  author = {Garcia, Maquelle Neves and Ferreira, Marciel José and Ivanov, Valeriy and dos Santos, Victor Alexandre Hardt Ferreira and Ceron, João Vitor and Guedes, Alacimar Viana and Saleska, Scott Reid and Oliveira, Rafael Silva},
+  date = {2021-05-05},
+  journaltitle = {Oecologia},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-021-04924-9},
+  url = {https://doi.org/10.1007/s00442-021-04924-9},
+  urldate = {2021-07-13},
+  abstract = {Plant ecophysiological trade-offs between different strategies for tolerating stresses are widely theorized to shape forest functional diversity and vulnerability to climate change. However, trade-offs between hydraulic and stomatal regulation during natural droughts remain under-studied, especially in tropical forests. We investigated eleven mature forest canopy trees in central Amazonia during the strong 2015 El Niño. We found greater xylem embolism resistance (\$\$\{P\}\_\{50\}\$\$= −\,3.3\,±\,0.8~MPa) and hydraulic safety margin (HSM\,=\,2.12\,±\,0.57~MPa) than previously observed in more precipitation-seasonal rainforests of eastern Amazonia and central America. We also discovered that taller trees exhibited lower embolism resistance and greater stomatal sensitivity, a height-structured trade-off between hydraulic resistance and active stomatal regulation. Such active regulation of tree water status, triggered by the onset of stem embolism, acted as a feedback to avoid further increases in embolism, and also explained declines in photosynthesis and transpiration. These results suggest that canopy trees exhibit a conservative hydraulic strategy to endure drought, with trade-offs between investment in xylem to reduce vulnerability to hydraulic failure, and active stomatal regulation to protect against low water potentials. These findings improve our understanding of strategies in tropical forest canopies and contribute to more accurate prediction of drought responses.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\365H2NZ4\\Garcia et al. - 2021 - Importance of hydraulic strategy trade-offs in str.pdf},
+  langid = {english},
+  options = {useprefix=true}
+}
+
+@article{garciaImportanceHydraulicStrategy2021a,
+  title = {Importance of Hydraulic Strategy Trade-Offs in Structuring Response of Canopy Trees to Extreme Drought in Central {{Amazon}}},
+  author = {Garcia, Maquelle Neves and Ferreira, Marciel José and Ivanov, Valeriy and dos Santos, Victor Alexandre Hardt Ferreira and Ceron, João Vitor and Guedes, Alacimar Viana and Saleska, Scott Reid and Oliveira, Rafael Silva},
+  date = {2021-05-05},
+  journaltitle = {Oecologia},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-021-04924-9},
+  url = {https://doi.org/10.1007/s00442-021-04924-9},
+  urldate = {2021-07-13},
+  abstract = {Plant ecophysiological trade-offs between different strategies for tolerating stresses are widely theorized to shape forest functional diversity and vulnerability to climate change. However, trade-offs between hydraulic and stomatal regulation during natural droughts remain under-studied, especially in tropical forests. We investigated eleven mature forest canopy trees in central Amazonia during the strong 2015 El Niño. We found greater xylem embolism resistance (\$\$\{P\}\_\{50\}\$\$= −\,3.3\,±\,0.8~MPa) and hydraulic safety margin (HSM\,=\,2.12\,±\,0.57~MPa) than previously observed in more precipitation-seasonal rainforests of eastern Amazonia and central America. We also discovered that taller trees exhibited lower embolism resistance and greater stomatal sensitivity, a height-structured trade-off between hydraulic resistance and active stomatal regulation. Such active regulation of tree water status, triggered by the onset of stem embolism, acted as a feedback to avoid further increases in embolism, and also explained declines in photosynthesis and transpiration. These results suggest that canopy trees exhibit a conservative hydraulic strategy to endure drought, with trade-offs between investment in xylem to reduce vulnerability to hydraulic failure, and active stomatal regulation to protect against low water potentials. These findings improve our understanding of strategies in tropical forest canopies and contribute to more accurate prediction of drought responses.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\94WJFBPS\\Garcia et al. - 2021 - Importance of hydraulic strategy trade-offs in str.pdf},
+  langid = {english},
+  options = {useprefix=true}
+}
+
+@article{garciaImportanceHydraulicStrategy2021b,
+  title = {Importance of Hydraulic Strategy Trade-Offs in Structuring Response of Canopy Trees to Extreme Drought in Central {{Amazon}}},
+  author = {Garcia, Maquelle Neves and Ferreira, Marciel José and Ivanov, Valeriy and dos Santos, Victor Alexandre Hardt Ferreira and Ceron, João Vitor and Guedes, Alacimar Viana and Saleska, Scott Reid and Oliveira, Rafael Silva},
+  date = {2021-05-05},
+  journaltitle = {Oecologia},
+  issn = {0029-8549, 1432-1939},
+  doi = {10.1007/s00442-021-04924-9},
+  url = {https://link.springer.com/10.1007/s00442-021-04924-9},
+  urldate = {2021-07-13},
+  abstract = {Plant ecophysiological trade-offs between different strategies for tolerating stresses are widely theorized to shape forest functional diversity and vulnerability to climate change. However, trade-offs between hydraulic and stomatal regulation during natural droughts remain under-studied, especially in tropical forests. We investigated eleven mature forest canopy trees in central Amazonia during the strong 2015 El Niño. We found greater xylem embolism resistance ({$\mkern1mu$}P50 = −\,3.3\,±\,0.8 MPa) and hydraulic safety margin (HSM\,=\,2.12\,±\,0.57 MPa) than previously observed in more precipitation-seasonal rainforests of eastern Amazonia and central America. We also discovered that taller trees exhibited lower embolism resistance and greater stomatal sensitivity, a height-structured trade-off between hydraulic resistance and active stomatal regulation. Such active regulation of tree water status, triggered by the onset of stem embolism, acted as a feedback to avoid further increases in embolism, and also explained declines in photosynthesis and transpiration. These results suggest that canopy trees exhibit a conservative hydraulic strategy to endure drought, with trade-offs between investment in xylem to reduce vulnerability to hydraulic failure, and active stomatal regulation to protect against low water potentials. These findings improve our understanding of strategies in tropical forest canopies and contribute to more accurate prediction of drought responses.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3SJDQ9AU\\Garcia et al. - 2021 - Importance of hydraulic strategy trade-offs in str.pdf},
+  langid = {english},
+  options = {useprefix=true}
 }
 
 @article{gebauerEffectsMildDrought2019,
@@ -4895,6 +4950,22 @@
   urldate = {2020-07-17},
   abstract = {Tropical tree species have evolved under very narrow temperature ranges compared to temperate forest species. Studies suggest that tropical trees may be more vulnerable to continued warming compared to temperate species, as tropical trees have shown declines in growth and photosynthesis at elevated temperatures. However, regional and global vegetation models lack the data needed to accurately represent such physiological responses to increased temperatures, especially for tropical forests. To address this need, we compared instantaneous photosynthetic temperature responses of mature canopy foliage, leaf temperatures, and air temperatures across vertical canopy gradients in three forest types: tropical wet, tropical moist, and temperate deciduous. Temperatures at which maximum photosynthesis occurred were greater in the tropical forests canopies than the temperate canopy (30 ± 0.3 ◦C vs. 27 ± 0.4 ◦C). However, contrary to expectations that tropical species would be functioning closer to threshold temperatures, photosynthetic temperature optima was exceeded by maximum daily leaf temperatures, resulting in sub-optimal rates of carbon assimilation for much of the day, especially in upper canopy foliage ({$>$}10 m). If trees are unable to thermally acclimate to projected elevated temperatures, these forests may shift from net carbon sinks to sources, with potentially dire implications to climate feedbacks and forest community composition.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\BMYN75EU\\Mau et al. 2018.pdf},
+  langid = {english},
+  number = {1}
+}
+
+@article{mcdowellEnvironmentalSensitivityGas2005,
+  title = {Environmental Sensitivity of Gas Exchange in Different-Sized Trees},
+  author = {McDowell, Nate G. and Licata, Julian and Bond, Barbara J.},
+  date = {2005-06-16},
+  journaltitle = {Oecologia},
+  volume = {145},
+  pages = {9},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-005-0104-6},
+  url = {https://doi.org/10.1007/s00442-005-0104-6},
+  urldate = {2021-07-13},
+  abstract = {The carbon isotope signature (δ13C) of foliar cellulose from sunlit tops of trees typically becomes enriched as trees of the same species in similar environments grow taller, indicative of size-related changes in leaf gas exchange. However, direct measurements of gas exchange in common environmental conditions do not always reveal size-related differences, even when there is a distinct size-related trend in δ13C of the very foliage used for the gas exchange measurements. Since δ13C of foliage predominately reflects gas exchange during spring when carbon is incorporated into leaf cellulose, this implies that gas exchange differences in different-sized trees are most likely to occur in favorable environmental conditions during spring. If gas exchange differs with tree size during wet but not dry conditions, then this further implies that environmental sensitivity of leaf gas exchange varies as a function of tree size. These implications are consistent with theoretical relationships among height, hydraulic conductance and gas exchange. We investigated the environmental sensitivity of gas exchange in different-sized Douglas-fir (Pseudotsuga menziesii) via a detailed process model that specifically incorporates size-related hydraulic conductance [soil–plant–atmosphere (SPA)], and empirical measurements from both wet and dry periods. SPA predicted, and the empirical measurements verified, that differences in gas exchange associated with tree size are greatest in wet and mild environmental conditions and minimal during drought. The results support the hypothesis that annual net carbon assimilation and transpiration of trees are limited by hydraulic capacity as tree size increases, even though at particular points in time there may be no difference in gas exchange between different-sized trees. Maximum net ecosystem exchange occurs in spring in Pacific Northwest forests; therefore, the presence of hydraulic limitations during this period may play a large role in carbon uptake differences with stand-age. The results also imply that the impacts of climate change on the growth and physiology of forest trees will vary depending on the age and size of the forest.},
   langid = {english},
   number = {1}
 }
