--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -267,7 +267,7 @@ It has been established that independent of light environment, traits also vary 
 ```
 ---
 nocite: |
-@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; Harris and Medina 2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000
+@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000
 ---
 
 
@@ -282,7 +282,7 @@ Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and z
 
 Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity,  @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  
 
-Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes [REF].
+Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes [*REF*].
 
 #### (Leaf lifecycles)
 
@@ -316,7 +316,7 @@ However, as we detail below, very few studies have evaluated temperature respons
 # refs in this table need to go in the nocite field below (easiest in alphabetical order)
 ```
 ---
-nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007;Carter and Cavaleri 2018; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; Hamerlynck and Knapp 1994; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; Harris and Medina 2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
+nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007; @carterWithinCanopyExperimentalLeaf2018a; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; @hamerlynckPhotosyntheticStomatalResponses1996a; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; @harrisChangesLeafProperties2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
 ---
 
 
@@ -379,8 +379,8 @@ The high temperature carbon compensation point of sun leaves is higher in isopre
 ### Tree metabolism, growth, and survival
 
 **Vertical gradients affect tree metabolism and growth.**
-Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured diameter breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizeRelatedScaling2015].
-Specifically, increases are linked increased leaf area and in part to increasing probability that the crown is in the canopy [@muller-landauTestingMetaabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific metabolism (Table 2).
+Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured diameter breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizerelatedScalingTree2015].
+Specifically, increases are linked increased leaf area and in part to increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific metabolism (Table 2).
 Of the fixed C, a higher proportion is consumed by respiration, in part because of higher leaf respiration ($R_{dark}$, Table 2) and in part because of higher sapwood volume (??confirm??) [**REFS**; @IncreasingRespiratoryCosts?].
 
 - C allocation --> respiration, woody growth, NSCs, foliage turnover, belowground allocation, reproduction
