--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -95,6 +95,25 @@
   number = {4}
 }
 
+@article{anderson-teixeiraSizerelatedScalingTree2015,
+  title = {Size-Related Scaling of Tree Form and Function in a Mixed-Age Forest},
+  author = {Anderson-Teixeira, Kristina J. and McGarvey, Jennifer C. and Muller-Landau, Helene C. and Park, Janice Y. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Bennett, Amy C. and So, Christopher V. and Bourg, Norman A. and Thompson, Jonathan R. and McMahon, Sean M. and McShea, William J.},
+  date = {2015},
+  journaltitle = {Functional Ecology},
+  volume = {29},
+  pages = {1587--1602},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.12470},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.12470},
+  urldate = {2021-07-14},
+  abstract = {Many morphological, physiological and ecological traits of trees scale with diameter, shaping the structure and function of forest ecosystems. Understanding the mechanistic basis for such scaling relationships is key to understanding forests globally and their role in Earth's changing climate system. Here, we evaluate theoretical predictions for the scaling of nine variables in a mixed-age temperate deciduous forest (CTFS-ForestGEO forest dynamics plot at the Smithsonian Conservation Biology Institute, Virginia, USA) and compare observed scaling parameters to those from other forests world-wide. We examine fifteen species and various environmental conditions. Structural, physiological and ecological traits of trees scaled with stem diameter in a manner that was sometimes consistent with existing theoretical predictions – more commonly with those predicting a range of scaling values than a single universal scaling value. Scaling relationships were variable among species, reflecting substantive ecological differences. Scaling relationships varied considerably with environmental conditions. For instance, the scaling of sap flux density varied with atmospheric moisture demand, and herbivore browsing dramatically influenced stem abundance scaling. Thus, stand-level, time-averaged scaling relationships (e.g., the scaling of diameter growth) are underlain by a diversity of species-level scaling relationships that can vary substantially with fluctuating environmental conditions. In order to use scaling theory to accurately characterize forest ecosystems and predict their responses to global change, it will be critical to develop a more nuanced understanding of both the forces that constrain stand-level scaling and the complexity of scaling variation across species and environmental conditions.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.12470},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RZHR6NZ6\\Anderson-Teixeira et al. - 2015 - Size-related scaling of tree form and function in .pdf;C\:\\Users\\Me\\Zotero\\storage\\VNYHXK9G\\Anderson-Teixeira et al. - 2015 - Size-related scaling of tree form and function in .pdf;C\:\\Users\\Me\\Zotero\\storage\\UZT8PGGP\\1365-2435.html},
+  keywords = {allometry,Center for Tropical Forest Science-Forest Global Earth Observatory,ecosystem,global,large forest dynamics plot,metabolic ecology,scaling theory,temperate deciduous forest},
+  langid = {english},
+  number = {12}
+}
+
 @article{arakiVerticalSeasonalVariations2017,
   title = {Vertical and Seasonal Variations in Temperature Responses of Leaf Respiration in a {{Chamaecyparis}} Obtusa Canopy},
   author = {Araki, Masatake G and Gyokusen, Koichiro and Kajimoto, Takuya},
@@ -5336,6 +5355,25 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17038},
   file = {C\:\\Users\\Me\\Zotero\\storage\\AZL55E7D\\Mujawamariya et al. - 2021 - Complete or overcompensatory thermal acclimation o.pdf},
   keywords = {drought,elevation gradient,montane,photosynthesis,successional groups,warming},
+  langid = {english},
+  number = {5}
+}
+
+@article{muller-landauTestingMetabolicEcology2006,
+  title = {Testing Metabolic Ecology Theory for Allometric Scaling of Tree Size, Growth and Mortality in Tropical Forests},
+  author = {Muller-Landau, Helene C. and Condit, Richard S. and Chave, Jerome and Thomas, Sean C. and Bohlman, Stephanie A. and Bunyavejchewin, Sarayudh and Davies, Stuart and Foster, Robin and Gunatilleke, Savitri and Gunatilleke, Nimal and Harms, Kyle E. and Hart, Terese and Hubbell, Stephen P. and Itoh, Akira and Kassim, Abd Rahman and LaFrankie, James V. and Lee, Hua Seng and Losos, Elizabeth and Makana, Jean-Remy and Ohkubo, Tatsuhiro and Sukumar, Raman and Sun, I.-Fang and Supardi, M. N. Nur and Tan, Sylvester and Thompson, Jill and Valencia, Renato and Muñoz, Gorky Villa and Wills, Christopher and Yamakura, Takuo and Chuyong, George and Dattaraja, Handanakere Shivaramaiah and Esufali, Shameema and Hall, Pamela and Hernandez, Consuelo and Kenfack, David and Kiratiprayoon, Somboon and Suresh, Hebbalalu S. and Thomas, Duncan and Vallejo, Martha Isabel and Ashton, Peter},
+  date = {2006},
+  journaltitle = {Ecology Letters},
+  volume = {9},
+  pages = {575--588},
+  issn = {1461-0248},
+  doi = {10.1111/j.1461-0248.2006.00904.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1461-0248.2006.00904.x},
+  urldate = {2021-07-14},
+  abstract = {The theory of metabolic ecology predicts specific relationships among tree stem diameter, biomass, height, growth and mortality. As demographic rates are important to estimates of carbon fluxes in forests, this theory might offer important insights into the global carbon budget, and deserves careful assessment. We assembled data from 10 old-growth tropical forests encompassing censuses of 367 ha and {$>$} 1.7 million trees to test the theory's predictions. We also developed a set of alternative predictions that retained some assumptions of metabolic ecology while also considering how availability of a key limiting resource, light, changes with tree size. Our results show that there are no universal scaling relationships of growth or mortality with size among trees in tropical forests. Observed patterns were consistent with our alternative model in the one site where we had the data necessary to evaluate it, and were inconsistent with the predictions of metabolic ecology in all forests.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1461-0248.2006.00904.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\86ZP5YKB\\Muller-Landau et al. - 2006 - Testing metabolic ecology theory for allometric sc.pdf;C\:\\Users\\Me\\Zotero\\storage\\D7UH86US\\j.1461-0248.2006.00904.html},
+  keywords = {Asymmetric competition,demographic rates,forest dynamics,light availability,metabolic theory of ecology,resource competition theory,tree allometry},
   langid = {english},
   number = {5}
 }
